OCTOPUS-379: Add support for NFS storage
Signed-off-by: Chandan.Abhyankar <chandan.abhyankar@ibm.com>

--- a/ansible/post/vars/main.yml
+++ b/ansible/post/vars/main.yml
@@ -2,3 +2,4 @@
 rsct_image: "quay.io/powercloud/rsct-ppc64le:latest"
 rmc_name: "openshift-powervm-rmc"
 project_name: "openshift-powervm-rmc"
+nfs_provisioner_image: "registry.k8s.io/sig-storage/nfs-subdir-external-provisioner:v4.0.2"
