--- a/ansible/post/tasks/main.yml
+++ b/ansible/post/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Post Installation Tasks (Approving CSRs, Setting up Node Labels, Installation of RSCT Daemonset)
+- name: Post Installation Tasks (Approving CSRs, Setting up Node Labels, Installation of RSCT Daemonset, Setup NFS storage)
   hosts: all
   vars_files:
     - ../vars/main.yml
@@ -75,3 +75,8 @@
         metadata:
           labels: "{{ node_labels }}"
     with_items: "{{ node_names.stdout_lines }}"
+
+  - name: Setup NFS storage if NFS_SERVER is provided
+    import_tasks: nfs_provisioner.yaml
+    when: nfs_server != "none"
+
