--- a/modules/3_interconnect/powervs_config_vars.yaml
+++ b/modules/3_interconnect/powervs_config_vars.yaml
@@ -1,5 +1,5 @@
 ---
 
-ibm_cloud_dl_endpoint_net_cidr: "${ibm_cloud_dl_endpoint_net_cidr}"
-ibm_cloud_http_proxy: "${ibm_cloud_http_proxy}"
+ibmcloud_dl_endpoint_net_cidr: "${ibmcloud_dl_endpoint_net_cidr}"
+ibmcloud_http_proxy: "${ibmcloud_http_proxy}"
 ocp_node_net_gw: "${ocp_node_net_gw}"
