--- a/ansible/support/meta/main.yml
+++ b/ansible/support/meta/main.yml
@@ -1,15 +1,12 @@
 galaxy_info:
   author: Paul Bastide
-  description: Enables support operations for day-2 installation
-  company: IBM
+  description: Enables support operations for day-2 installation on PowerVS
+  company: IBM and Red Hat
   license: Apache-2.0
   min_ansible_version: 2.12.0
-
   platforms:
     - name: GenericLinux
       versions:
         - all
-
   galaxy_tags: []
-
 dependencies: []
