--- a/ansible/support/vars/main.yml
+++ b/ansible/support/vars/main.yml
@@ -1,19 +1,19 @@
 ---
-ssh_gen_key: true
-ipi: false
-baremetal: true
-staticips: false
-force_ocp_download: false
-cleanup_existing: false
-ocp_bios: "https://mirror.openshift.com/pub/openshift-v4/dependencies/rhcos/4.9/4.9.0/rhcos-4.9.0-x86_64-live-rootfs.x86_64.img"
-ocp_initramfs: "https://mirror.openshift.com/pub/openshift-v4/dependencies/rhcos/4.9/4.9.0/rhcos-4.9.0-x86_64-live-initramfs.x86_64.img"
-ocp_install_kernel: "https://mirror.openshift.com/pub/openshift-v4/dependencies/rhcos/4.9/4.9.0/rhcos-4.9.0-x86_64-live-kernel-x86_64"
-ocp_client: "https://mirror.openshift.com/pub/openshift-v4/clients/ocp/4.9.18/openshift-client-linux-4.9.18.tar.gz"
-ocp_installer: "https://mirror.openshift.com/pub/openshift-v4/clients/ocp/4.9.18/openshift-install-linux-4.9.18.tar.gz"
-download_imgs: true
-chars: (\\_|\\$|\\\|\\/|\\=|\\)|\\(|\\&|\\^|\\%|\\$|\\#|\\@|\\!|\\*)
-ppc64le: false
-uefi: false
-chronyconfig:
-  enabled: false
-machineconfig_path: ../machineconfig
+ocp_client: "https://mirror.openshift.com/pub/openshift-v4/multi/clients/ocp-dev-preview/4.14.0-ec.3/ppc64le/openshift-client-linux.tar.gz"
+openshift_machine_config_url: "https://<HOSTNAME>:22623/config/worker"
+vpc_support_machine: "<IP>"
+ports:
+- 443/tcp
+- 80/tcp
+- 8080/tcp
+- 6443/tcp
+- 6443/udp
+- 22623/tcp
+- 22623/udp
+- 9000/tcp
+- 69/udp
+- 111/tcp
+- 2049/tcp
+- 20048/tcp
+- 50825/tcp
+- 53248/tcp
