feat: update the storage class to not use subpath and nfs image to v4.0.18
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/ansible/post/templates/nfs-sc.yml
+++ b/ansible/post/templates/nfs-sc.yml
@@ -4,5 +4,5 @@ metadata:
   name: nfs-storage
 provisioner: k8s-sigs.io/nfs-subdir-external-provisioner
 parameters:
-  pathPattern: "${.PVC.namespace}/${.PVC.annotations.nfs.io/storage-path}" # waits for nfs.io/storage-path annotation, if not specified will accept as empty string.
   onDelete: delete
+  archiveOnDelete: "false"
