--- a/ansible/support/vars/main.yml
+++ b/ansible/support/vars/main.yml
@@ -3,17 +3,17 @@ ocp_client: "https://mirror.openshift.com/pub/openshift-v4/multi/clients/ocp-dev
 openshift_machine_config_url: "https://<HOSTNAME>:22623/config/worker"
 vpc_support_machine: "<IP>"
 ports:
-- 443/tcp
-- 80/tcp
-- 8080/tcp
-- 6443/tcp
-- 6443/udp
-- 22623/tcp
-- 22623/udp
-- 9000/tcp
-- 69/udp
-- 111/tcp
-- 2049/tcp
-- 20048/tcp
-- 50825/tcp
-- 53248/tcp
+- { port: "443", proto: "tcp" }
+- { port: "80", proto: "tcp" }
+- { port: "8080", proto: "tcp" }
+- { port: "6443", proto: "tcp" }
+- { port: "6443", proto: "udp" }
+- { port: "22623", proto: "tcp" }
+- { port: "22623", proto: "udp" }
+- { port: "9000", proto: "tcp" }
+- { port: "69", proto: "udp" }
+- { port: "111", proto: "tcp" }
+- { port: "2049", proto: "tcp" }
+- { port: "20048", proto: "tcp" }
+- { port: "50825", proto: "tcp" }
+- { port: "53248", proto: "tcp" }
