fix(pvs_support): refactored the vars file to load correctly from a template and improved the inventory file
- refactored the firewall so it's applied seamlessly
- refactor the vars.file usage so it loads correctly
- refactor the httpd.conf template so it loads properly
- remove resolv.conf that is not used
- refactor inventory template to use loopback ip

Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/ansible/support/files/httpd.conf
+++ b/ansible/support/files/httpd.conf
@@ -1,10 +1,53 @@
+ServerRoot "/etc/httpd"
+
+#
+# Listen: Allows you to bind Apache to specific IP addresses and/or
+# ports, instead of the default. See also the <VirtualHost>
+# directive.
 Listen 8080
 
+#
+# Dynamic Shared Object (DSO) Support
+Include conf.modules.d/*.conf
+
+#
+# If you wish httpd to run as a different user or group, you must run
+# httpd as root initially and it will switch.  
+#
 # User/Group: The name (or #number) of the user/group to run httpd as.
+# It is usually good practice to create a dedicated user and group for
+# running httpd, as with most system services.
+#
 User apache
 Group apache
 
+# 'Main' server configuration
+#
+# The directives in this section set up the values used by the 'main'
+# server, which responds to any requests that aren't handled by a
+# <VirtualHost> definition.  These values also provide defaults for
+# any <VirtualHost> containers you may define later in the file.
+#
+# All of these directives may appear inside <VirtualHost> containers,
+# in which case these default settings will be overridden for the
+# virtual host being defined.
+#
+
+#
+# ServerAdmin: Your address, where problems with the server should be
+# e-mailed.  This address appears on some server-generated pages, such
+# as error documents.  e.g. admin@your-domain.com
+#
 ServerAdmin root@localhost
+
+#
+# ServerName gives the name and port that the server uses to identify itself.
+# This can often be determined automatically, but we recommend you specify
+# it explicitly to prevent problems during startup.
+#
+# If your host doesn't have a registered DNS name, enter its IP address here.
+#
+#ServerName www.example.com:80
 
 #
 # Deny access to the entirety of your server's filesystem. You must
@@ -15,6 +58,13 @@ ServerAdmin root@localhost
     AllowOverride none
     Require all denied
 </Directory>
+
+#
+# Note that from this point forward you must specifically allow
+# particular features to be enabled - so if something's not working as
+# you might expect, make sure that you have specifically enabled it
+# below.
+#
 
 #
 # DocumentRoot: The directory out of which you will serve your
@@ -250,9 +300,7 @@ AddDefaultCharset UTF-8
 # Defaults if commented: EnableMMAP On, EnableSendfile Off
 #
 #EnableMMAP off
-EnableSendfile on
+EnableSendfile off
 
-# Supplemental configuration
-#
 # Load config files in the "/etc/httpd/conf.d" directory, if any.
 IncludeOptional conf.d/*.conf
