OCTOPUS-397: header change for ansible/support
Signed-off-by: Chandan.Abhyankar <chandan.abhyankar@ibm.com>

--- a/ansible/support/tasks/main.yml
+++ b/ansible/support/tasks/main.yml
@@ -135,7 +135,8 @@
         url: "{{ openshift_machine_config_url }}"
         dest: /var/www/html/worker.ign
         validate_certs: false
-        headers: "Accept: application/vnd.coreos.ignition+json;version=3.2.0"
+        headers:
+          "Accept": "application/vnd.coreos.ignition+json;version=3.2.0"
       environment:
         https_proxy: http://{{ vpc_support_server_ip }}:3128
 
