fix(pvs_support): switch to api-int
- add replace to //api. to //api-int.
- update cloud-init.yaml.tpl to allow only local networks
- update security group sg-cp-internal

Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/ansible/support/tasks/main.yml
+++ b/ansible/support/tasks/main.yml
@@ -52,6 +52,9 @@
       state: started
       enabled: yes
 
+  - name: Disable fcontext
+    shell: "semanage fcontext -a -t httpd_sys_rw_content_t /var/www/html/worker.ign || true"
+
   - name: Open up firewall ports
     firewalld:
       permanent: yes
