--- a/ansible/post/tasks/main.yml
+++ b/ansible/post/tasks/main.yml
@@ -51,8 +51,10 @@
 
   - name: Create openshift-powervm-rmc project
     when: projects_list.stdout.find(project_name) == -1
-    shell: "oc adm new-project {{ project_name }}"
-#    shell: "oc apply -f files/rmc-ns.yaml"
+    kubernetes.core.k8s:
+      state: present
+      proxy: "http://{{ nfs_server }}:3128"
+      definition: "{{ lookup('template', '../templates/rmc-ns.yml.j2')}}"
 
   - name: Create openshift-powervm-rmc serviceaccount
     kubernetes.core.k8s:
