--- a/ansible/post/tasks/main.yml
+++ b/ansible/post/tasks/main.yml
@@ -43,7 +43,7 @@
     when: csr_list.stdout != "" or ppc_nodes_count.stdout == "0"
 
   - name: Ensure able to fetch project list
-    shell: "oc get projects -v=10"
+    shell: "oc get projects"
     register: projects_list
     until: projects_list.stdout.find("default") != -1
     retries: 20
