--- a/ansible/post/tasks/nfs_provisioner.yaml
+++ b/ansible/post/tasks/nfs_provisioner.yaml
@@ -3,7 +3,7 @@
     state: present
     proxy: "http://{{ nfs_server }}:3128"
     definition: "{{ lookup('template', '../templates/nfs-ns.yml') }}"
-  
+
 - name: Create RBAC for nfs-provisioner
   kubernetes.core.k8s:
     state: present
@@ -11,7 +11,7 @@
     definition: "{{ lookup('template', '../templates/nfs-rbac.yml') }}"
 
 - name: Setup Authorization
-  shell: "oc adm policy add-scc-to-user hostmount-anyuid system:serviceaccount:nfs-provisioner:nfs-client-provisioner"
+  shell: "export HTTPS_PROXY=http://{{ nfs_server }}:3128 && oc adm policy add-scc-to-user hostmount-anyuid system:serviceaccount:nfs-provisioner:nfs-client-provisioner"
 
 - name: Create Deployment for nfs-provisioner
   kubernetes.core.k8s:
@@ -26,8 +26,9 @@
     definition: "{{ lookup('template', '../templates/nfs-sc.yml') }}"
 
 - name: Ensure nfs-provisioner Pod is up and running fine
-  shell: "oc get pods -n nfs-provisioner"
+  shell: "export HTTPS_PROXY=http://{{ nfs_server }}:3128 && oc get pods -n nfs-provisioner"
   register: pod_output
   until: pod_output.stdout.find("Running") != -1
   retries: 10
   delay: 30
+
