--- a/ansible/support/tasks/main.yml
+++ b/ansible/support/tasks/main.yml
@@ -123,3 +123,10 @@
           name: "httpd"
           state: restarted
           daemon_reload: yes
+
+  - name: Wait for quick to become open on the vpc support machine
+    ansible.builtin.wait_for:
+      host: {{ vpc_support_server_ip }}
+      port: 3128
+      delay: 30
+      timeout: 600
