--- a/ansible/post/tasks/nfs_provisioner.yaml
+++ b/ansible/post/tasks/nfs_provisioner.yaml
@@ -32,3 +32,7 @@
   retries: 10
   delay: 30
 
+- name: Remove the block storage as the default.
+  shell: |
+    export HTTPS_PROXY=http://{{ nfs_server }}:3128 \
+      && oc patch storageclass ibmc-vpc-block-10iops-tier -p '{"metadata": {"annotations": {"storageclass.kubernetes.io/is-default-class": "false"}}}'
