fix: logged message for port coming active
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/ansible/support/tasks/main.yml
+++ b/ansible/support/tasks/main.yml
@@ -124,7 +124,7 @@
           state: restarted
           daemon_reload: yes
 
-  - name: Wait for quick to become open on the vpc support machine
+  - name: Wait for port to become open on the vpc support machine
     ansible.builtin.wait_for:
       host: "{{ vpc_support_server_ip }}"
       port: 3128
