fix: update the cicd == true conditional to match the expectation
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/ansible/post/tasks/main.yml
+++ b/ansible/post/tasks/main.yml
@@ -107,6 +107,6 @@
     when: nfs_server != "none"
 
   - name: Cleanup events in openshift-etcd for cicd
-    when: cicd != "none"
+    when: cicd == "true"
     shell: |
       export HTTPS_PROXY=http://{{ nfs_server }}:3128 && oc delete events --all=true -n openshift-etcd
