fix: csr approval in a situation where a failure occured in a prior run yet a csr is generated and not issued
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/ansible/post/tasks/main.yml
+++ b/ansible/post/tasks/main.yml
@@ -19,35 +19,10 @@
       line: "HTTPS_PROXY=http://{{ nfs_server }}:3128"
     become: yes
 
-  - name: Get CSRs
-    shell: "export HTTPS_PROXY=http://{{ nfs_server }}:3128 && oc get csr -ojson | jq -r '.items[] | select(.status == {} ) | .metadata.name'"
-    register: csr_list
-
-  - name: Print Pending CSRs
-    debug:
-      msg: "Pending CSR List is : {{ csr_list.stdout }}"
-
-  # Run approve CSR command till CSR list is empty.
-  - name: Approve Worker CSRs
-    shell: "export HTTPS_PROXY=http://{{ nfs_server }}:3128 && for i in `oc get csr | grep -i pending | awk '{ print $1 }'`; do oc adm certificate approve $i; done && oc get csr -ojson | jq -r '.items[] | select(.status == {} ) | .metadata.name'"
-    register: csr_list
-    until: csr_list.stdout == ""
-    retries: 5
-    delay: 40
-    when: powervs_worker_count|int > 0
-
-  - name: Wait for 20 seconds before checking Ready state for PowerVS worker node/s
-    pause:
-      seconds: 20
-
-  # Run approve command again and wait till we have all powervs worker/s with Ready status. 'xargs -r ' is used to ignore empty stdin.
-  - name: Check Ready state for PowerVS Worker Node
-    shell: "export HTTPS_PROXY=http://{{ nfs_server }}:3128 && oc get csr -ojson | jq -r '.items[] | select(.status == {} ) | .metadata.name' | xargs -r oc adm certificate approve && oc get nodes -l kubernetes.io/arch=ppc64le | grep -w worker | grep -w Ready | wc -l"
-    register: ready_count_result
-    until: ready_count_result.stdout.find(powervs_worker_count) != -1
-    retries: 50
-    delay: 30
-    when: powervs_worker_count|int > 0
+  - name: Approve and Issue CSRs for Power Workers only
+    shell: |
+      chmod +x ../files/approve_and_issue.sh
+      ../files/approve_and_issue.sh {{ nfs_server }} {{ power_worker_count }} {{ power_prefix }}
 
   - name: Ensure able to fetch project list
     shell: "export HTTPS_PROXY=http://{{ nfs_server }}:3128 && oc get projects"
