--- a/ansible/post/ansible.cfg
+++ b/ansible/post/ansible.cfg
@@ -5,3 +5,5 @@ filter_plugins = filter_plugins
 host_key_checking = False
 deprecation_warnings=False
 retry_files = false
+[persistent_connection]
+command_timeout = 150
