fix: optimize the powervm-rmc project creation
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/ansible/post/tasks/main.yml
+++ b/ansible/post/tasks/main.yml
@@ -31,11 +31,19 @@
     retries: 20
     delay: 30
 
+  - name: Template a file 
+    ansible.builtin.template:
+      src: ../templates/rmc-ns.yml.j2
+      dest: rmc-ns.yml
+      owner: root
+      group: root
+      mode: '0644'
+
   - name: Create powervm-rmc project
     when: projects_list.stdout.find(project_name) == -1
     shell: |
       export HTTPS_PROXY=http://{{ nfs_server }}:3128
-      echo {{ lookup('template', '../templates/rmc-ns.yml.j2')}} | oc apply -f -
+      oc apply -f rmc-ns.yml
 
   - name: Create powervm-rmc serviceaccount
     kubernetes.core.k8s:
